testfx - get tests running